@@ -340,6 +340,18 @@
               </listitem>
               <listitem>
                 <para>
+                  <varname>mixrampdb</varname>:
+                  <returnvalue>mixramp threshold in dB</returnvalue>
+                </para>
+              </listitem>
+              <listitem>
+                <para>
+                  <varname>mixrampdelay</varname>:
+                  <returnvalue>mixrampdelay in seconds</returnvalue>
+                </para>
+              </listitem>
+              <listitem>
+                <para>
                   <varname>audio</varname>:
                   <returnvalue>sampleRate:bits:channels</returnvalue>
                 </para>
@@ -439,6 +451,32 @@
           <listitem>
             <para>
               Sets crossfading between songs.
+            </para>
+          </listitem>
+        </varlistentry>
+        <varlistentry id="command_mixrampdb">
+          <term>
+            <cmdsynopsis>
+              <command>mixrampdb</command>
+              <arg choice="req"><replaceable>deciBels</replaceable></arg>
+            </cmdsynopsis>
+          </term>
+          <listitem>
+            <para>
+              Sets the threshold at which songs will be overlapped. Like crossfading but doesn't fade the track volume, just overlaps. The songs need to have MixRamp tags added by an external tool. 0dB is the normalized maximum volume so use negative values, I prefer -17dB. In the absence of mixramp tags crossfading will be used. See http://sourceforge.net/projects/mixramp
+            </para>
+          </listitem>
+        </varlistentry>
+        <varlistentry id="command_mixrampdelay">
+          <term>
+            <cmdsynopsis>
+              <command>mixrampdelay</command>
+              <arg choice="req"><replaceable>SECONDS</replaceable></arg>
+            </cmdsynopsis>
+          </term>
+          <listitem>
+            <para>
+              Additional time subtracted from the overlap calculated by mixrampdb. A value of "nan" disables MixRamp overlapping and falls back to crossfading.
             </para>
           </listitem>
         </varlistentry>
